--- a/index.css
+++ b/index.css
@@ -12,3 +12,69 @@
     background-color: #f0f0f0;
     margin: 10px;
 }
+
+/* Login page CSS Start */
+.login-container {
+    width: 380px;
+    margin: 40px auto 0;
+  }
+  
+  .login-form {
+    position: relative;
+    z-index: 1;
+    background: #fd9133;
+    border-radius: 10px;
+    max-width: 380px;
+    padding: 25px 40px;
+    text-align: center;
+  }
+  
+  .login-form input {
+    outline: 0;
+    background: white;
+    width: 100%;
+    border: 0;
+    border-radius: 5px;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+  }
+  
+  .login-form input:focus {
+    background: rgb(222, 217, 217);
+  }
+  
+  .login-form button {
+    text-transform: uppercase;
+    outline: 0;
+    background: #4b6cb7;
+    width: 100%;
+    border: 0;
+    border-radius: 5px;
+    padding: 15px;
+    color: #ffffff;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+  }
+  
+  .login-form button:active {
+    background: #395591;
+  }
+  
+  .login-form span {
+    font-size: 40px;
+    color: #4b6cb7;
+    margin-bottom: 25px;
+    display: block;
+  }
+  
+  .login-form p.error {
+    margin: 0 0 10px 10px;
+    text-align: left;
+    font-size: 13px;
+    color: red;
+  }
+  /* Login page CSS End */
